added requests and sent their results to html

--- a/mysite/polls/templates/polls/page2.html
+++ b/mysite/polls/templates/polls/page2.html
@@ -4,7 +4,29 @@
     
     <body>
 
-        <p>This is the second page</p>
+        <ul>
+        	
+        	<table>
+        	        <thead>
+        	            <tr>
+        	                <th> User </th>
+        	                <th> Zipcode </th>
+        	                <th> Country </th>
+        	                <th> City </th>
+        	            </tr>
+        	        </thead>
+        	        <tbody>
+        	        {% for row in rows %}
+        	            <tr>
+        	                <td> {{ row.user }} </td>
+        	                <td> {{ row.zipcode }} </td>
+        	                <td> {{ row.country }} </td>
+        	                <td> {{ row.city }} </td>
+        	            </tr>
+        	        {% endfor %}
+        	        </tbody>
+        	    </table>
+    	</ul>
 
     </body>
 </html>
