--- a/mysite/polls/templates/polls/page2.html
+++ b/mysite/polls/templates/polls/page2.html
@@ -22,5 +22,9 @@
         	    {% endfor %}
         	</tbody>
         </table>
+        <br>
+        <p> Manufacturers whose cars names contain defined symbols: {{ res }}</p>
+        <p> Pizzas with several toppings: {{ res1 }}</p>
+        <p> Restaurants with defined address: {{ res2 }}</p>
     </body>
 </html>
